projects/k8s-canary/k8s/ingress/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-stable
  namespace: canary-lab
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: canary.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
